--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>zen garden</title>
-    <meta name="description" content=" &lt;3 whichlight.">
+    <title>dot brush</title>
+    <meta name="description" content="drawing with dots &lt;3 whichlight.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style type="text/css">
